--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-backend",
   "version": "1.0.0",
-  "description": "Primera apliaciion en node",
+  "description": "Primera aplicación en node",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
